Archive2/c7/b087f5b313c175/output
main.cpp: In function ‘int main()’:
main.cpp:37:41: error: conversion from ‘std::tuple<int, float, double, bool, char, int*, float*, double*, void*>’ to non-scalar type ‘main()::<anonymous struct>’ requested
     struct{} _ = my_tuple_cat(t1, t2, t3);
                                         ^
